--- a/test/fixtures/page.html
+++ b/test/fixtures/page.html
@@ -8,6 +8,10 @@
   <input type="text" data-testid="testid-text-input">
   <label for="label-text-input">Label A</label>
   <input id="label-text-input" type="text">
+
+  <div id="scoped">
+    <h3>Hello h3</h3>
+  </div>
 </body>
 
 </html>
