feat: bump to dom-testing-library v3
BREAKING CHANGE: now using v3 of dom-testing-library

--- a/test/fixtures/page.html
+++ b/test/fixtures/page.html
@@ -12,6 +12,10 @@
   <div id="scoped">
     <h3>Hello h3</h3>
   </div>
+
+  <table role="presentation">
+    <td>Layout table</td>
+  </table>
 </body>
 
 </html>
