feat: export configure function with data-testid override

--- a/test/fixtures/page.html
+++ b/test/fixtures/page.html
@@ -3,7 +3,7 @@
 
 <body>
   <h1>Hello h1</h1>
-  <h2>Hello h2</h2>
+  <h2 data-id="my-header">Hello h2</h2>
   <img alt="Image A" src="">
   <input type="text" data-testid="testid-text-input">
   <label for="label-text-input">Label A</label>
