--- a/test/fixtures/page.html
+++ b/test/fixtures/page.html
@@ -6,7 +6,7 @@
   <h2 data-id="second-level-header">Hello h2</h2>
   <img alt="Image A" src="">
   <input type="text" data-testid="testid-text-input">
-  <label for="label-text-input">Label A</label>
+  <label for="label-text-input" data-testid="testid-label">Label A</label>
   <input id="label-text-input" type="text">
 
   <div id="scoped">
