--- a/test/fixtures/late-page.html
+++ b/test/fixtures/late-page.html
@@ -7,6 +7,14 @@
         const loaded = document.createElement('span')
         loaded.textContent = 'Loaded!'
         document.body.appendChild(loaded)
+
+        const heading1 = document.createElement('h1')
+        heading1.textContent = 'Hello h1'
+        document.body.appendChild(heading1)
+
+        const heading2 = document.createElement('h2')
+        heading2.textContent = 'Hello h2'
+        document.body.appendChild(heading2)
       }, 5000)
     </script>
   </body>
