feat: enable nested RegExp options

--- a/test/fixtures/page.html
+++ b/test/fixtures/page.html
@@ -9,6 +9,7 @@
   <label for="label-text-input" data-testid="testid-label">Label A</label>
   <input id="label-text-input" type="text">
 
+  <button role="button">getByRole Test</button>
   <div id="scoped">
     <h3>Hello h3</h3>
   </div>
